parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> funcs
Rule 2     funcs -> funcs func
Rule 3     funcs -> func
Rule 4     func -> FUNC NAME LPAREN formal_args RPAREN LBRACE statements RBRACE
Rule 5     func -> FUNC NAME LPAREN RPAREN LBRACE statements RBRACE
Rule 6     lambda -> LAMBDA LPAREN formal_args RPAREN LBRACE statements RBRACE
Rule 7     lambda -> LAMBDA LPAREN RPAREN LBRACE statements RBRACE
Rule 8     formal_args -> formal_args COMMA formal_arg
Rule 9     formal_args -> formal_arg
Rule 10    formal_arg -> NAME
Rule 11    formal_arg -> REF NAME
Rule 12    statements -> statements statement
Rule 13    statements -> statement
Rule 14    statement -> variable ASSIGN expression SEMI
Rule 15    variable -> NAME DOT NAME
Rule 16    variable -> NAME
Rule 17    statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE
Rule 18    statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 19    statement -> WHILE LPAREN expression RPAREN LBRACE statements RBRACE
Rule 20    statement -> expression SEMI
Rule 21    statement -> RETURN expression SEMI
Rule 22    statement -> RETURN SEMI
Rule 23    expression -> NOT expression
Rule 24    expression -> MINUS expression
Rule 25    expression -> expression EQ expression
Rule 26    expression -> expression GREATER expression
Rule 27    expression -> expression LESS expression
Rule 28    expression -> expression NOT_EQ expression
Rule 29    expression -> expression GREATER_EQ expression
Rule 30    expression -> expression LESS_EQ expression
Rule 31    expression -> expression PLUS expression
Rule 32    expression -> expression MINUS expression
Rule 33    expression -> expression MULTIPLY expression
Rule 34    expression -> expression DIVIDE expression
Rule 35    expression -> LPAREN expression RPAREN
Rule 36    expression -> expression OR expression
Rule 37    expression -> expression AND expression
Rule 38    expression -> NUMBER
Rule 39    expression -> lambda
Rule 40    expression -> TRUE
Rule 41    expression -> FALSE
Rule 42    expression -> NIL
Rule 43    expression -> AT
Rule 44    expression -> STRING
Rule 45    expression -> variable
Rule 46    expression -> NAME LPAREN args RPAREN
Rule 47    expression -> NAME LPAREN RPAREN
Rule 48    expression -> NAME DOT NAME LPAREN args RPAREN
Rule 49    expression -> NAME DOT NAME LPAREN RPAREN
Rule 50    args -> args COMMA expression
Rule 51    args -> expression

Terminals, with rules where they appear

AND                  : 37
ASSIGN               : 14
AT                   : 43
COMMA                : 8 50
DIVIDE               : 34
DOT                  : 15 48 49
ELSE                 : 18
EQ                   : 25
FALSE                : 41
FUNC                 : 4 5
GREATER              : 26
GREATER_EQ           : 29
IF                   : 17 18
LAMBDA               : 6 7
LBRACE               : 4 5 6 7 17 18 18 19
LESS                 : 27
LESS_EQ              : 30
LPAREN               : 4 5 6 7 17 18 19 35 46 47 48 49
MINUS                : 24 32
MULTIPLY             : 33
NAME                 : 4 5 10 11 15 15 16 46 47 48 48 49 49
NIL                  : 42
NOT                  : 23
NOT_EQ               : 28
NUMBER               : 38
OR                   : 36
PLUS                 : 31
RBRACE               : 4 5 6 7 17 18 18 19
REF                  : 11
RETURN               : 21 22
RPAREN               : 4 5 6 7 17 18 19 35 46 47 48 49
SEMI                 : 14 20 21 22
STRING               : 44
TRUE                 : 40
WHILE                : 19
error                : 

Nonterminals, with rules where they appear

args                 : 46 48 50
expression           : 14 17 18 19 20 21 23 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 36 36 37 37 50 51
formal_arg           : 8 9
formal_args          : 4 6 8
func                 : 2 3
funcs                : 1 2
lambda               : 39
program              : 0
statement            : 12 13
statements           : 4 5 6 7 12 17 18 18 19
variable             : 14 45

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . funcs
    (2) funcs -> . funcs func
    (3) funcs -> . func
    (4) func -> . FUNC NAME LPAREN formal_args RPAREN LBRACE statements RBRACE
    (5) func -> . FUNC NAME LPAREN RPAREN LBRACE statements RBRACE

    FUNC            shift and go to state 4

    program                        shift and go to state 1
    funcs                          shift and go to state 2
    func                           shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> funcs .
    (2) funcs -> funcs . func
    (4) func -> . FUNC NAME LPAREN formal_args RPAREN LBRACE statements RBRACE
    (5) func -> . FUNC NAME LPAREN RPAREN LBRACE statements RBRACE

    $end            reduce using rule 1 (program -> funcs .)
    FUNC            shift and go to state 4

    func                           shift and go to state 5

state 3

    (3) funcs -> func .

    FUNC            reduce using rule 3 (funcs -> func .)
    $end            reduce using rule 3 (funcs -> func .)


state 4

    (4) func -> FUNC . NAME LPAREN formal_args RPAREN LBRACE statements RBRACE
    (5) func -> FUNC . NAME LPAREN RPAREN LBRACE statements RBRACE

    NAME            shift and go to state 6


state 5

    (2) funcs -> funcs func .

    FUNC            reduce using rule 2 (funcs -> funcs func .)
    $end            reduce using rule 2 (funcs -> funcs func .)


state 6

    (4) func -> FUNC NAME . LPAREN formal_args RPAREN LBRACE statements RBRACE
    (5) func -> FUNC NAME . LPAREN RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 7


state 7

    (4) func -> FUNC NAME LPAREN . formal_args RPAREN LBRACE statements RBRACE
    (5) func -> FUNC NAME LPAREN . RPAREN LBRACE statements RBRACE
    (8) formal_args -> . formal_args COMMA formal_arg
    (9) formal_args -> . formal_arg
    (10) formal_arg -> . NAME
    (11) formal_arg -> . REF NAME

    RPAREN          shift and go to state 10
    NAME            shift and go to state 8
    REF             shift and go to state 12

    formal_args                    shift and go to state 9
    formal_arg                     shift and go to state 11

state 8

    (10) formal_arg -> NAME .

    RPAREN          reduce using rule 10 (formal_arg -> NAME .)
    COMMA           reduce using rule 10 (formal_arg -> NAME .)


state 9

    (4) func -> FUNC NAME LPAREN formal_args . RPAREN LBRACE statements RBRACE
    (8) formal_args -> formal_args . COMMA formal_arg

    RPAREN          shift and go to state 13
    COMMA           shift and go to state 14


state 10

    (5) func -> FUNC NAME LPAREN RPAREN . LBRACE statements RBRACE

    LBRACE          shift and go to state 15


state 11

    (9) formal_args -> formal_arg .

    RPAREN          reduce using rule 9 (formal_args -> formal_arg .)
    COMMA           reduce using rule 9 (formal_args -> formal_arg .)


state 12

    (11) formal_arg -> REF . NAME

    NAME            shift and go to state 16


state 13

    (4) func -> FUNC NAME LPAREN formal_args RPAREN . LBRACE statements RBRACE

    LBRACE          shift and go to state 17


state 14

    (8) formal_args -> formal_args COMMA . formal_arg
    (10) formal_arg -> . NAME
    (11) formal_arg -> . REF NAME

    NAME            shift and go to state 8
    REF             shift and go to state 12

    formal_arg                     shift and go to state 18

state 15

    (5) func -> FUNC NAME LPAREN RPAREN LBRACE . statements RBRACE
    (12) statements -> . statements statement
    (13) statements -> . statement
    (14) statement -> . variable ASSIGN expression SEMI
    (17) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (18) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (19) statement -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (20) statement -> . expression SEMI
    (21) statement -> . RETURN expression SEMI
    (22) statement -> . RETURN SEMI
    (15) variable -> . NAME DOT NAME
    (16) variable -> . NAME
    (23) expression -> . NOT expression
    (24) expression -> . MINUS expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression GREATER expression
    (27) expression -> . expression LESS expression
    (28) expression -> . expression NOT_EQ expression
    (29) expression -> . expression GREATER_EQ expression
    (30) expression -> . expression LESS_EQ expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression MULTIPLY expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . expression OR expression
    (37) expression -> . expression AND expression
    (38) expression -> . NUMBER
    (39) expression -> . lambda
    (40) expression -> . TRUE
    (41) expression -> . FALSE
    (42) expression -> . NIL
    (43) expression -> . AT
    (44) expression -> . STRING
    (45) expression -> . variable
    (46) expression -> . NAME LPAREN args RPAREN
    (47) expression -> . NAME LPAREN RPAREN
    (48) expression -> . NAME DOT NAME LPAREN args RPAREN
    (49) expression -> . NAME DOT NAME LPAREN RPAREN
    (6) lambda -> . LAMBDA LPAREN formal_args RPAREN LBRACE statements RBRACE
    (7) lambda -> . LAMBDA LPAREN RPAREN LBRACE statements RBRACE

    IF              shift and go to state 25
    WHILE           shift and go to state 26
    RETURN          shift and go to state 27
    NAME            shift and go to state 19
    NOT             shift and go to state 28
    MINUS           shift and go to state 29
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 30
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    NIL             shift and go to state 34
    AT              shift and go to state 35
    STRING          shift and go to state 36
    LAMBDA          shift and go to state 37

    statements                     shift and go to state 21
    statement                      shift and go to state 22
    variable                       shift and go to state 23
    expression                     shift and go to state 24
    lambda                         shift and go to state 31

state 16

    (11) formal_arg -> REF NAME .

    RPAREN          reduce using rule 11 (formal_arg -> REF NAME .)
    COMMA           reduce using rule 11 (formal_arg -> REF NAME .)


state 17

    (4) func -> FUNC NAME LPAREN formal_args RPAREN LBRACE . statements RBRACE
    (12) statements -> . statements statement
    (13) statements -> . statement
    (14) statement -> . variable ASSIGN expression SEMI
    (17) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (18) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (19) statement -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (20) statement -> . expression SEMI
    (21) statement -> . RETURN expression SEMI
    (22) statement -> . RETURN SEMI
    (15) variable -> . NAME DOT NAME
    (16) variable -> . NAME
    (23) expression -> . NOT expression
    (24) expression -> . MINUS expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression GREATER expression
    (27) expression -> . expression LESS expression
    (28) expression -> . expression NOT_EQ expression
    (29) expression -> . expression GREATER_EQ expression
    (30) expression -> . expression LESS_EQ expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression MULTIPLY expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . expression OR expression
    (37) expression -> . expression AND expression
    (38) expression -> . NUMBER
    (39) expression -> . lambda
    (40) expression -> . TRUE
    (41) expression -> . FALSE
    (42) expression -> . NIL
    (43) expression -> . AT
    (44) expression -> . STRING
    (45) expression -> . variable
    (46) expression -> . NAME LPAREN args RPAREN
    (47) expression -> . NAME LPAREN RPAREN
    (48) expression -> . NAME DOT NAME LPAREN args RPAREN
    (49) expression -> . NAME DOT NAME LPAREN RPAREN
    (6) lambda -> . LAMBDA LPAREN formal_args RPAREN LBRACE statements RBRACE
    (7) lambda -> . LAMBDA LPAREN RPAREN LBRACE statements RBRACE

    IF              shift and go to state 25
    WHILE           shift and go to state 26
    RETURN          shift and go to state 27
    NAME            shift and go to state 19
    NOT             shift and go to state 28
    MINUS           shift and go to state 29
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 30
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    NIL             shift and go to state 34
    AT              shift and go to state 35
    STRING          shift and go to state 36
    LAMBDA          shift and go to state 37

    statements                     shift and go to state 38
    statement                      shift and go to state 22
    variable                       shift and go to state 23
    expression                     shift and go to state 24
    lambda                         shift and go to state 31

state 18

    (8) formal_args -> formal_args COMMA formal_arg .

    RPAREN          reduce using rule 8 (formal_args -> formal_args COMMA formal_arg .)
    COMMA           reduce using rule 8 (formal_args -> formal_args COMMA formal_arg .)


state 19

    (15) variable -> NAME . DOT NAME
    (16) variable -> NAME .
    (46) expression -> NAME . LPAREN args RPAREN
    (47) expression -> NAME . LPAREN RPAREN
    (48) expression -> NAME . DOT NAME LPAREN args RPAREN
    (49) expression -> NAME . DOT NAME LPAREN RPAREN

    DOT             shift and go to state 39
    ASSIGN          reduce using rule 16 (variable -> NAME .)
    SEMI            reduce using rule 16 (variable -> NAME .)
    EQ              reduce using rule 16 (variable -> NAME .)
    GREATER         reduce using rule 16 (variable -> NAME .)
    LESS            reduce using rule 16 (variable -> NAME .)
    NOT_EQ          reduce using rule 16 (variable -> NAME .)
    GREATER_EQ      reduce using rule 16 (variable -> NAME .)
    LESS_EQ         reduce using rule 16 (variable -> NAME .)
    PLUS            reduce using rule 16 (variable -> NAME .)
    MINUS           reduce using rule 16 (variable -> NAME .)
    MULTIPLY        reduce using rule 16 (variable -> NAME .)
    DIVIDE          reduce using rule 16 (variable -> NAME .)
    OR              reduce using rule 16 (variable -> NAME .)
    AND             reduce using rule 16 (variable -> NAME .)
    LPAREN          shift and go to state 40


state 20

    (35) expression -> LPAREN . expression RPAREN
    (23) expression -> . NOT expression
    (24) expression -> . MINUS expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression GREATER expression
    (27) expression -> . expression LESS expression
    (28) expression -> . expression NOT_EQ expression
    (29) expression -> . expression GREATER_EQ expression
    (30) expression -> . expression LESS_EQ expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression MULTIPLY expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . expression OR expression
    (37) expression -> . expression AND expression
    (38) expression -> . NUMBER
    (39) expression -> . lambda
    (40) expression -> . TRUE
    (41) expression -> . FALSE
    (42) expression -> . NIL
    (43) expression -> . AT
    (44) expression -> . STRING
    (45) expression -> . variable
    (46) expression -> . NAME LPAREN args RPAREN
    (47) expression -> . NAME LPAREN RPAREN
    (48) expression -> . NAME DOT NAME LPAREN args RPAREN
    (49) expression -> . NAME DOT NAME LPAREN RPAREN
    (6) lambda -> . LAMBDA LPAREN formal_args RPAREN LBRACE statements RBRACE
    (7) lambda -> . LAMBDA LPAREN RPAREN LBRACE statements RBRACE
    (15) variable -> . NAME DOT NAME
    (16) variable -> . NAME

    NOT             shift and go to state 28
    MINUS           shift and go to state 29
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 30
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    NIL             shift and go to state 34
    AT              shift and go to state 35
    STRING          shift and go to state 36
    NAME            shift and go to state 43
    LAMBDA          shift and go to state 37

    expression                     shift and go to state 41
    lambda                         shift and go to state 31
    variable                       shift and go to state 42

state 21

    (5) func -> FUNC NAME LPAREN RPAREN LBRACE statements . RBRACE
    (12) statements -> statements . statement
    (14) statement -> . variable ASSIGN expression SEMI
    (17) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (18) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (19) statement -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (20) statement -> . expression SEMI
    (21) statement -> . RETURN expression SEMI
    (22) statement -> . RETURN SEMI
    (15) variable -> . NAME DOT NAME
    (16) variable -> . NAME
    (23) expression -> . NOT expression
    (24) expression -> . MINUS expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression GREATER expression
    (27) expression -> . expression LESS expression
    (28) expression -> . expression NOT_EQ expression
    (29) expression -> . expression GREATER_EQ expression
    (30) expression -> . expression LESS_EQ expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression MULTIPLY expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . expression OR expression
    (37) expression -> . expression AND expression
    (38) expression -> . NUMBER
    (39) expression -> . lambda
    (40) expression -> . TRUE
    (41) expression -> . FALSE
    (42) expression -> . NIL
    (43) expression -> . AT
    (44) expression -> . STRING
    (45) expression -> . variable
    (46) expression -> . NAME LPAREN args RPAREN
    (47) expression -> . NAME LPAREN RPAREN
    (48) expression -> . NAME DOT NAME LPAREN args RPAREN
    (49) expression -> . NAME DOT NAME LPAREN RPAREN
    (6) lambda -> . LAMBDA LPAREN formal_args RPAREN LBRACE statements RBRACE
    (7) lambda -> . LAMBDA LPAREN RPAREN LBRACE statements RBRACE

    RBRACE          shift and go to state 44
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    RETURN          shift and go to state 27
    NAME            shift and go to state 19
    NOT             shift and go to state 28
    MINUS           shift and go to state 29
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 30
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    NIL             shift and go to state 34
    AT              shift and go to state 35
    STRING          shift and go to state 36
    LAMBDA          shift and go to state 37

    statement                      shift and go to state 45
    variable                       shift and go to state 23
    expression                     shift and go to state 24
    lambda                         shift and go to state 31

state 22

    (13) statements -> statement .

    RBRACE          reduce using rule 13 (statements -> statement .)
    IF              reduce using rule 13 (statements -> statement .)
    WHILE           reduce using rule 13 (statements -> statement .)
    RETURN          reduce using rule 13 (statements -> statement .)
    NAME            reduce using rule 13 (statements -> statement .)
    NOT             reduce using rule 13 (statements -> statement .)
    MINUS           reduce using rule 13 (statements -> statement .)
    LPAREN          reduce using rule 13 (statements -> statement .)
    NUMBER          reduce using rule 13 (statements -> statement .)
    TRUE            reduce using rule 13 (statements -> statement .)
    FALSE           reduce using rule 13 (statements -> statement .)
    NIL             reduce using rule 13 (statements -> statement .)
    AT              reduce using rule 13 (statements -> statement .)
    STRING          reduce using rule 13 (statements -> statement .)
    LAMBDA          reduce using rule 13 (statements -> statement .)


state 23

    (14) statement -> variable . ASSIGN expression SEMI
    (45) expression -> variable .

    ASSIGN          shift and go to state 46
    SEMI            reduce using rule 45 (expression -> variable .)
    EQ              reduce using rule 45 (expression -> variable .)
    GREATER         reduce using rule 45 (expression -> variable .)
    LESS            reduce using rule 45 (expression -> variable .)
    NOT_EQ          reduce using rule 45 (expression -> variable .)
    GREATER_EQ      reduce using rule 45 (expression -> variable .)
    LESS_EQ         reduce using rule 45 (expression -> variable .)
    PLUS            reduce using rule 45 (expression -> variable .)
    MINUS           reduce using rule 45 (expression -> variable .)
    MULTIPLY        reduce using rule 45 (expression -> variable .)
    DIVIDE          reduce using rule 45 (expression -> variable .)
    OR              reduce using rule 45 (expression -> variable .)
    AND             reduce using rule 45 (expression -> variable .)


state 24

    (20) statement -> expression . SEMI
    (25) expression -> expression . EQ expression
    (26) expression -> expression . GREATER expression
    (27) expression -> expression . LESS expression
    (28) expression -> expression . NOT_EQ expression
    (29) expression -> expression . GREATER_EQ expression
    (30) expression -> expression . LESS_EQ expression
    (31) expression -> expression . PLUS expression
    (32) expression -> expression . MINUS expression
    (33) expression -> expression . MULTIPLY expression
    (34) expression -> expression . DIVIDE expression
    (36) expression -> expression . OR expression
    (37) expression -> expression . AND expression

    SEMI            shift and go to state 47
    EQ              shift and go to state 48
    GREATER         shift and go to state 49
    LESS            shift and go to state 50
    NOT_EQ          shift and go to state 51
    GREATER_EQ      shift and go to state 52
    LESS_EQ         shift and go to state 53
    PLUS            shift and go to state 54
    MINUS           shift and go to state 55
    MULTIPLY        shift and go to state 56
    DIVIDE          shift and go to state 57
    OR              shift and go to state 58
    AND             shift and go to state 59


state 25

    (17) statement -> IF . LPAREN expression RPAREN LBRACE statements RBRACE
    (18) statement -> IF . LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE

    LPAREN          shift and go to state 60


state 26

    (19) statement -> WHILE . LPAREN expression RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 61


state 27

    (21) statement -> RETURN . expression SEMI
    (22) statement -> RETURN . SEMI
    (23) expression -> . NOT expression
    (24) expression -> . MINUS expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression GREATER expression
    (27) expression -> . expression LESS expression
    (28) expression -> . expression NOT_EQ expression
    (29) expression -> . expression GREATER_EQ expression
    (30) expression -> . expression LESS_EQ expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression MULTIPLY expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . expression OR expression
    (37) expression -> . expression AND expression
    (38) expression -> . NUMBER
    (39) expression -> . lambda
    (40) expression -> . TRUE
    (41) expression -> . FALSE
    (42) expression -> . NIL
    (43) expression -> . AT
    (44) expression -> . STRING
    (45) expression -> . variable
    (46) expression -> . NAME LPAREN args RPAREN
    (47) expression -> . NAME LPAREN RPAREN
    (48) expression -> . NAME DOT NAME LPAREN args RPAREN
    (49) expression -> . NAME DOT NAME LPAREN RPAREN
    (6) lambda -> . LAMBDA LPAREN formal_args RPAREN LBRACE statements RBRACE
    (7) lambda -> . LAMBDA LPAREN RPAREN LBRACE statements RBRACE
    (15) variable -> . NAME DOT NAME
    (16) variable -> . NAME

    SEMI            shift and go to state 63
    NOT             shift and go to state 28
    MINUS           shift and go to state 29
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 30
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    NIL             shift and go to state 34
    AT              shift and go to state 35
    STRING          shift and go to state 36
    NAME            shift and go to state 43
    LAMBDA          shift and go to state 37

    expression                     shift and go to state 62
    lambda                         shift and go to state 31
    variable                       shift and go to state 42

state 28

    (23) expression -> NOT . expression
    (23) expression -> . NOT expression
    (24) expression -> . MINUS expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression GREATER expression
    (27) expression -> . expression LESS expression
    (28) expression -> . expression NOT_EQ expression
    (29) expression -> . expression GREATER_EQ expression
    (30) expression -> . expression LESS_EQ expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression MULTIPLY expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . expression OR expression
    (37) expression -> . expression AND expression
    (38) expression -> . NUMBER
    (39) expression -> . lambda
    (40) expression -> . TRUE
    (41) expression -> . FALSE
    (42) expression -> . NIL
    (43) expression -> . AT
    (44) expression -> . STRING
    (45) expression -> . variable
    (46) expression -> . NAME LPAREN args RPAREN
    (47) expression -> . NAME LPAREN RPAREN
    (48) expression -> . NAME DOT NAME LPAREN args RPAREN
    (49) expression -> . NAME DOT NAME LPAREN RPAREN
    (6) lambda -> . LAMBDA LPAREN formal_args RPAREN LBRACE statements RBRACE
    (7) lambda -> . LAMBDA LPAREN RPAREN LBRACE statements RBRACE
    (15) variable -> . NAME DOT NAME
    (16) variable -> . NAME

    NOT             shift and go to state 28
    MINUS           shift and go to state 29
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 30
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    NIL             shift and go to state 34
    AT              shift and go to state 35
    STRING          shift and go to state 36
    NAME            shift and go to state 43
    LAMBDA          shift and go to state 37

    expression                     shift and go to state 64
    lambda                         shift and go to state 31
    variable                       shift and go to state 42

state 29

    (24) expression -> MINUS . expression
    (23) expression -> . NOT expression
    (24) expression -> . MINUS expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression GREATER expression
    (27) expression -> . expression LESS expression
    (28) expression -> . expression NOT_EQ expression
    (29) expression -> . expression GREATER_EQ expression
    (30) expression -> . expression LESS_EQ expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression MULTIPLY expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . expression OR expression
    (37) expression -> . expression AND expression
    (38) expression -> . NUMBER
    (39) expression -> . lambda
    (40) expression -> . TRUE
    (41) expression -> . FALSE
    (42) expression -> . NIL
    (43) expression -> . AT
    (44) expression -> . STRING
    (45) expression -> . variable
    (46) expression -> . NAME LPAREN args RPAREN
    (47) expression -> . NAME LPAREN RPAREN
    (48) expression -> . NAME DOT NAME LPAREN args RPAREN
    (49) expression -> . NAME DOT NAME LPAREN RPAREN
    (6) lambda -> . LAMBDA LPAREN formal_args RPAREN LBRACE statements RBRACE
    (7) lambda -> . LAMBDA LPAREN RPAREN LBRACE statements RBRACE
    (15) variable -> . NAME DOT NAME
    (16) variable -> . NAME

    NOT             shift and go to state 28
    MINUS           shift and go to state 29
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 30
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    NIL             shift and go to state 34
    AT              shift and go to state 35
    STRING          shift and go to state 36
    NAME            shift and go to state 43
    LAMBDA          shift and go to state 37

    expression                     shift and go to state 65
    lambda                         shift and go to state 31
    variable                       shift and go to state 42

state 30

    (38) expression -> NUMBER .

    SEMI            reduce using rule 38 (expression -> NUMBER .)
    EQ              reduce using rule 38 (expression -> NUMBER .)
    GREATER         reduce using rule 38 (expression -> NUMBER .)
    LESS            reduce using rule 38 (expression -> NUMBER .)
    NOT_EQ          reduce using rule 38 (expression -> NUMBER .)
    GREATER_EQ      reduce using rule 38 (expression -> NUMBER .)
    LESS_EQ         reduce using rule 38 (expression -> NUMBER .)
    PLUS            reduce using rule 38 (expression -> NUMBER .)
    MINUS           reduce using rule 38 (expression -> NUMBER .)
    MULTIPLY        reduce using rule 38 (expression -> NUMBER .)
    DIVIDE          reduce using rule 38 (expression -> NUMBER .)
    OR              reduce using rule 38 (expression -> NUMBER .)
    AND             reduce using rule 38 (expression -> NUMBER .)
    RPAREN          reduce using rule 38 (expression -> NUMBER .)
    COMMA           reduce using rule 38 (expression -> NUMBER .)


state 31

    (39) expression -> lambda .

    SEMI            reduce using rule 39 (expression -> lambda .)
    EQ              reduce using rule 39 (expression -> lambda .)
    GREATER         reduce using rule 39 (expression -> lambda .)
    LESS            reduce using rule 39 (expression -> lambda .)
    NOT_EQ          reduce using rule 39 (expression -> lambda .)
    GREATER_EQ      reduce using rule 39 (expression -> lambda .)
    LESS_EQ         reduce using rule 39 (expression -> lambda .)
    PLUS            reduce using rule 39 (expression -> lambda .)
    MINUS           reduce using rule 39 (expression -> lambda .)
    MULTIPLY        reduce using rule 39 (expression -> lambda .)
    DIVIDE          reduce using rule 39 (expression -> lambda .)
    OR              reduce using rule 39 (expression -> lambda .)
    AND             reduce using rule 39 (expression -> lambda .)
    RPAREN          reduce using rule 39 (expression -> lambda .)
    COMMA           reduce using rule 39 (expression -> lambda .)


state 32

    (40) expression -> TRUE .

    SEMI            reduce using rule 40 (expression -> TRUE .)
    EQ              reduce using rule 40 (expression -> TRUE .)
    GREATER         reduce using rule 40 (expression -> TRUE .)
    LESS            reduce using rule 40 (expression -> TRUE .)
    NOT_EQ          reduce using rule 40 (expression -> TRUE .)
    GREATER_EQ      reduce using rule 40 (expression -> TRUE .)
    LESS_EQ         reduce using rule 40 (expression -> TRUE .)
    PLUS            reduce using rule 40 (expression -> TRUE .)
    MINUS           reduce using rule 40 (expression -> TRUE .)
    MULTIPLY        reduce using rule 40 (expression -> TRUE .)
    DIVIDE          reduce using rule 40 (expression -> TRUE .)
    OR              reduce using rule 40 (expression -> TRUE .)
    AND             reduce using rule 40 (expression -> TRUE .)
    RPAREN          reduce using rule 40 (expression -> TRUE .)
    COMMA           reduce using rule 40 (expression -> TRUE .)


state 33

    (41) expression -> FALSE .

    SEMI            reduce using rule 41 (expression -> FALSE .)
    EQ              reduce using rule 41 (expression -> FALSE .)
    GREATER         reduce using rule 41 (expression -> FALSE .)
    LESS            reduce using rule 41 (expression -> FALSE .)
    NOT_EQ          reduce using rule 41 (expression -> FALSE .)
    GREATER_EQ      reduce using rule 41 (expression -> FALSE .)
    LESS_EQ         reduce using rule 41 (expression -> FALSE .)
    PLUS            reduce using rule 41 (expression -> FALSE .)
    MINUS           reduce using rule 41 (expression -> FALSE .)
    MULTIPLY        reduce using rule 41 (expression -> FALSE .)
    DIVIDE          reduce using rule 41 (expression -> FALSE .)
    OR              reduce using rule 41 (expression -> FALSE .)
    AND             reduce using rule 41 (expression -> FALSE .)
    RPAREN          reduce using rule 41 (expression -> FALSE .)
    COMMA           reduce using rule 41 (expression -> FALSE .)


state 34

    (42) expression -> NIL .

    SEMI            reduce using rule 42 (expression -> NIL .)
    EQ              reduce using rule 42 (expression -> NIL .)
    GREATER         reduce using rule 42 (expression -> NIL .)
    LESS            reduce using rule 42 (expression -> NIL .)
    NOT_EQ          reduce using rule 42 (expression -> NIL .)
    GREATER_EQ      reduce using rule 42 (expression -> NIL .)
    LESS_EQ         reduce using rule 42 (expression -> NIL .)
    PLUS            reduce using rule 42 (expression -> NIL .)
    MINUS           reduce using rule 42 (expression -> NIL .)
    MULTIPLY        reduce using rule 42 (expression -> NIL .)
    DIVIDE          reduce using rule 42 (expression -> NIL .)
    OR              reduce using rule 42 (expression -> NIL .)
    AND             reduce using rule 42 (expression -> NIL .)
    RPAREN          reduce using rule 42 (expression -> NIL .)
    COMMA           reduce using rule 42 (expression -> NIL .)


state 35

    (43) expression -> AT .

    SEMI            reduce using rule 43 (expression -> AT .)
    EQ              reduce using rule 43 (expression -> AT .)
    GREATER         reduce using rule 43 (expression -> AT .)
    LESS            reduce using rule 43 (expression -> AT .)
    NOT_EQ          reduce using rule 43 (expression -> AT .)
    GREATER_EQ      reduce using rule 43 (expression -> AT .)
    LESS_EQ         reduce using rule 43 (expression -> AT .)
    PLUS            reduce using rule 43 (expression -> AT .)
    MINUS           reduce using rule 43 (expression -> AT .)
    MULTIPLY        reduce using rule 43 (expression -> AT .)
    DIVIDE          reduce using rule 43 (expression -> AT .)
    OR              reduce using rule 43 (expression -> AT .)
    AND             reduce using rule 43 (expression -> AT .)
